k8s/manifests/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  labels:
    app: employee-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
      - name: employee-service
        image: tunisterk/go-services:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
